defect fixes for right nav embed, tabs, icon text and mega menu tabs reducing the spacing between tabs for slgi site.

--- a/node-app/src/views/core/components/content/right-navigation/style.scss
+++ b/node-app/src/views/core/components/content/right-navigation/style.scss
@@ -473,7 +473,7 @@
             width: calc(100% + 20px);
             > .separator + .layout-container {
                 .cmp-container{
-                    div:first-child {
+                   > div:first-child {
                         padding-top: 0;
                     }
                 }
